--- a/templates/index.twig
+++ b/templates/index.twig
@@ -3,10 +3,25 @@
 {% block title %}Home{% endblock %}
 
 	{% block content %}
-<h1>Hello, world!</h1>
-<p>If you're reading this, then some shit happended</p>
+<div class="row">
+	<div class="col-md-8">
+		<div class="panel panel-default">
+			<div class="panel-heading">Featured Videos</div>
+			<div class="panel-body">
+				{{ video_box(video_data) }}
+				{{ video_box(video_data) }}
+				{{ video_box(video_data) }}
+			</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="panel panel-default">
+			<div class="panel-heading">Latest News</div>
+			<div class="panel-body">
+				some stuff here idk
+			</div>
+		</div>
+	</div>
+</div>
 
-{% if test %}
-<p>{{ test }}</p>
-{% endif %}
 	{% endblock %}
