--- a/templates/index.twig
+++ b/templates/index.twig
@@ -8,9 +8,11 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">Featured Videos</div>
 			<div class="panel-body">
-				{{ video_box(video_data) }}
-				{{ video_box(video_data) }}
-				{{ video_box(video_data) }}
+				{% for video in videos %}
+					{{ video_box(video) }}
+				{% else %}
+					<p>No uploaded videos. :'(</p>
+				{% endfor %}
 			</div>
 		</div>
 	</div>
