--- a/templates/components/videobox.twig
+++ b/templates/components/videobox.twig
@@ -1,7 +1,7 @@
 <div class="panel panel-primary">
 	<div class="panel-body">
 		<div class="row">
-			<a href="watch.php?v={{ data.id }}">
+			<a href="watch.php?v={{ data.video_id }}">
 				<div class="col-md-4">
 					<div class="thumbnail">
 						<img src="assets/placeholder.jpg">
@@ -9,8 +9,8 @@
 				</div>
 			</a>
 			<div class="col-md-8">
-				<h3><a href="watch.php?v={{ data.id }}">{{ data.title }}</a></h3>
-				<p>{{ data.author }} &bull; {{ data.views }} views &bull; {{ data.date }}</p>
+				<h3><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h3>
+				<p>{{ data.author }} &bull; {{ data.views }} views &bull; {{ data.date | date('M j, Y') }}</p>
 				<p>{{ data.description|length > 250 ? data.description|slice(0, 250) ~ '...' : data.description  }}</p>
 			</div>
 		</div>
