--- a/templates/components/watchbox.twig
+++ b/templates/components/watchbox.twig
@@ -2,8 +2,8 @@
 	<div class="panel-body">
 		<div class="col-md-8">
 			<h3>{{ data.title }}</a></h3>
-			<p>{{ data.author }} &bull; {{ data.views }} views &bull; {{ data.date }}</p>
-			<p>{{ data.description|length > 250 ? data.description|slice(0, 250) ~ '...' : data.description  }}</p>
+			<p>{{ data.author }} &bull; {{ data.views }} views &bull; {{ data.date | date('M j, Y') }}</p>
+			<p>{{ data.description }}</p>
 		</div>
 	</div>
 </div>
