make videos play from watch page, remove videofile_hd from sql
we have to encode videos in a different format and output a manifest file to do quality selection.

--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -13,7 +13,7 @@
 						sources: [
 							{
 								type: 'mp4',
-								src: 'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4',
+								src: '{{ video.videofile }}',
 							}
 						],
 					};
