show thumbnails if they exist at `assets/thumb/[videoid].png`

--- a/templates/components/smallvideobox.twig
+++ b/templates/components/smallvideobox.twig
@@ -2,7 +2,7 @@
 	<a href="watch.php?v={{ data.video_id }}">
 	<div class="col-md-6">
 		<div class="thumbnail" style="margin-bottom:0">
-			<img src="assets/placeholder.jpg">
+			<img src="{{ video_thumbnail(data.video_id) }}">
 		</div>
 		</div>
 	</a>
