--- a/templates/components/videobox.twig
+++ b/templates/components/videobox.twig
@@ -4,7 +4,7 @@
 			<a href="watch.php?v={{ data.video_id }}">
 				<div class="col-md-4">
 					<div class="thumbnail">
-						<img src="assets/placeholder.jpg">
+						<img src="{{ video_thumbnail(data.video_id) }}">
 					</div>
 				</div>
 			</a>
