Make times in video boxes relative.

--- a/templates/components/smallvideobox.twig
+++ b/templates/components/smallvideobox.twig
@@ -11,6 +11,6 @@
 	<p>{{ data.author }}</p>
 	</div>
 	<div class="col-md-12">
-		<p>{{ data.views }} views &bull; {{ data.date | date('M j, Y') }}</p>
+		<p>{{ data.views }} views &bull; {{ data.time | relative_time }}</p>
 	</div>
 </div>
