--- a/templates/components/watchbox.twig
+++ b/templates/components/watchbox.twig
@@ -2,7 +2,7 @@
 	<div class="panel-body">
 		<div class="col-md-8">
 			<h3>{{ data.title }}</a></h3>
-			<p>{{ data.author }} &bull; {{ data.views }} views &bull; {{ data.date | date('M j, Y') }}</p>
+			<p>{{ data.author }} &bull; {{ data.views }} views &bull; {{ data.time | date('M j, Y') }}</p>
 			<p>{{ data.description }}</p>
 		</div>
 	</div>
