--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -31,8 +31,12 @@
 					<li><a href="#">Some other page</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="login.php">Login</a></li>
-					<li><a href="register.php">Register</a></li>
+					{% if logged_in %}
+						<li><a href="#">{{ current_user.username }}</a></li>
+					{% else %}
+						<li><a href="login.php">Login</a></li>
+						<li><a href="register.php">Register</a></li>
+					{% endif %}
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
