--- a/templates/components/smallvideobox.twig
+++ b/templates/components/smallvideobox.twig
@@ -8,7 +8,7 @@
 	</a>
 	<div class="row col-md-7">
 	<h5><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h5>
-	<p>{{ data.author }}</p>
+	<p>{{ userlink(data, 'u_') }}</p>
 	</div>
 	<div class="col-md-12">
 		<p>{{ data.views }} views &bull; {{ data.time | relative_time }}</p>
