add video uploading!

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -33,6 +33,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					{% if logged_in %}
 						<li><a href="#">{{ current_user.username }}</a></li>
+						<li><a href="/upload.php">Upload</a></li>
 					{% else %}
 						<li><a href="login.php">Login</a></li>
 						<li><a href="register.php">Register</a></li>
