--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -12,7 +12,7 @@
 					const config = {
 						sources: [
 							{
-								type: 'mp4',
+								type: 'dash',
 								src: '{{ video.videofile }}',
 							}
 						],
