whoops! i forgot to change the title!

--- a/templates/upload.twig
+++ b/templates/upload.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% block title %}Video{% endblock %}
+{% block title %}Upload{% endblock %}
 
 	{% block content %}
 	<form name="uploadForm" id="uploadForm" method="post" action="upload.php" enctype="multipart/form-data">
