--- a/templates/user.twig
+++ b/templates/user.twig
@@ -1,15 +1,19 @@
 {% extends "_layout.twig" %}
+
+{% block title %}User{% endblock %}
+
 	{% block content %}
-<div class="row">
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="assets/profiledef.png" alt="pfp">
-      <div class="caption">
-        <h3>User</h3>
-        <p>Hello, I don't actually exist.</p>
-        <p><a href="#" class="btn btn-warning" role="button">Subscribe</a> <a href="#" class="btn btn-default" role="button">Add friend</a></p>
-      </div>
-    </div>
-  </div>
-</div>
+	<div class="row">
+	  <div class="col-sm-6 col-md-4">
+		<div class="thumbnail">
+		  <img src="assets/profiledef.png" alt="pfp">
+		  <div class="caption">
+			<h3>{{ user.username }}</h3>
+			<p>Joined {{ user.joined | date('M j, Y') }}</p>
+			<p>database does not have such fields lol</p>
+			<p><a href="#" class="btn btn-warning" role="button">Subscribe</a> <a href="#" class="btn btn-default" role="button">Add friend</a></p>
+		  </div>
+		</div>
+	  </div>
+	</div>
 	{% endblock %}
