--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -15,7 +15,7 @@
 	<title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-	<nav class="navbar navbar-inverse">
+	<nav class="navbar navbar-default navbar-static-top">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
