profiledef is in png
quick question: do we still make pfps use PNG or can we just compress them in JPG for better optimization, doubt this should be the case for profiledef though.

--- a/templates/components/profileimage.twig
+++ b/templates/components/profileimage.twig
@@ -4,7 +4,7 @@
 		{{ imgSrcPath | raw }}
 	{% endautoescape %}
 {% else %}
-	{% set imgSrcPath = 'assets/profiledef.jpg' %}
+	{% set imgSrcPath = 'assets/profiledef.png' %}
 	{% autoescape %}
 		{{ imgSrcPath | raw }}
 	{% endautoescape %}
