add bootstrap icons
looks a bit off, will need to be fixed

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -6,7 +6,7 @@
 <div class="row">
 	<div class="col-md-8">
 		<div class="panel panel-default">
-			<div class="panel-heading">Featured Videos</div>
+			<div class="panel-heading"><i class="bi bi-star-fill"></i> Featured Videos</div>
 			<div class="panel-body">
 				{% for video in videos %}
 					{{ video_box(video) }}
@@ -18,7 +18,7 @@
 	</div>
 	<div class="col-md-4">
 		<div class="panel panel-default">
-			<div class="panel-heading">Latest News</div>
+			<div class="panel-heading"><i class="bi bi-newspaper"></i> Latest News</div>
 			<div class="panel-body">
 				some stuff here idk
 			</div>
