Revert "Why put the svg code into the html itself?"
This reverts commit 7d528cd08a009f3c87c81f653f476138d86d314d.

--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -6,7 +6,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-9">
-				<div id="playerContainer"></div>
+				<div id="playerContainer" style="width:854px;height:480px"></div>
 				<script src="https://cdn.jsdelivr.net/npm/indigo-player@1/lib/indigo-player.js"></script>
 				<script>
 					const config = {
@@ -23,7 +23,7 @@
 
 					// You can use the player object now to access the player and it's methods (play, pause, ...)
 				</script>
-				<div style="margin-top:5px">
+				<div style="margin-top:5px;width:854px">
 					{{ watch_box(video) }}
 				</div>
 			</div>
