make log out button actually functional

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -33,7 +33,7 @@
 					{% if logged_in %}
 						<li><a href="#">{{ current_user.username }}</a></li>
 						<li><a class="bi-upload" href="/upload.php"> Upload</a></li>
-						<li><a href="#">Log Out</a></li>
+						<li><a href="logout.php">Log Out</a></li>
 					{% else %}
 						<li><a href="login.php">Login</a></li>
 						<li><a href="register.php">Register</a></li>
