--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -7,13 +7,14 @@
 	<!-- bootstrap 3 -->
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="../bootstrap/css/squarebracket-bonuses.css">
 	<!-- jquery and bootstrap 3 javascript -->
 	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 	<script src=../bootstrap/js/bootstrap.min.js"></script>
 	<title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-	<nav class="navbar navbar-default navbar-static-top">
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -22,7 +23,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">[squareBracket]</a>
+				<a class="navbar-brand" href="/">[squareBracket] Milestone 1</a>
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
@@ -47,7 +48,6 @@
 		</div>
 	</nav>
 	<div class="container">
-	<div class="alert alert-warning" role="alert">Notice: This is in pre-alpha, everything isn't complete.</div>
 		{% block content %}{% endblock %}
 	</div>
 </body>
