replace text other (icty i swear to christ don't revert this)

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -5,8 +5,8 @@
 	{% block content %}
 	</div><div class="bs-docs-header">
 	<div class="container">
-  <h1>We do what PokTube does</h1>
-  <p>We make video consumption possible even though there's like 80 quadrillion sites decidated to this</p>
+  <h1>Welcome to squareBracket</h1>
+  <p>This is like any other video sharing site... for now at least.</p>
   <p>
   <button href="register.php" type="button" class="btn btn-primary btn-lg">Get started ›</button><br>
   <small>Already have an account?</small>
