edit bootstrap theme a bit

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -5,12 +5,12 @@
 	{% block content %}
 	</div><div class="bs-docs-header">
 	<div class="container">
-  <h1>Welcome to squareBracket</h1>
+  <h1>Welcome to squareBracket <big>2.0</big></h1>
   <p>This is like any other video sharing site... for now at least.</p>
   <p>
   <button href="register.php" type="button" class="btn btn-primary btn-lg">Get started ›</button><br>
   <small>Already have an account?</small>
-  <button type="button" class="btn btn-primary">Login</button>
+  <button type="button" class="btn btn-default">Login</button>
 </p>
   </div>
 </div>
