add comment template
todo: make it read comments from sql, rendered from markdown.

--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -26,6 +26,11 @@
 				<div style="margin-top:5px">
 					{{ watch_box(video) }}
 				</div>
+				<div style="margin-top:5px">
+					{{ comment(comments) }}
+					{{ comment(comments) }}
+					{{ comment(comments) }}
+				</div>
 			</div>
 			<div class="col-md-3">
 				<div class="panel panel-primary">
