--- a/templates/components/comment.twig
+++ b/templates/components/comment.twig
@@ -1,5 +1,5 @@
 <div class="row">
-	<a href="watch.php?v=_0q8_3a_3f0">
+	<a href="user.php?name={{ data.u_username }}">
 	<div class="col-md-1">
 		<img class="img-circle" style="width:32px;height:32px" src="{{ profile_image(data.u_username) }}"> <!--uhh it's a bad idea to use u_username, but it's a temp solution anyways.-->
 	</div>
