--- a/templates/components/comment.twig
+++ b/templates/components/comment.twig
@@ -1,11 +1,13 @@
 <div class="row">
 	<a href="user.php?name={{ data.u_username }}">
 	<div class="col-md-1">
-		<img class="img-circle" style="width:32px;height:32px" src="{{ profile_image(data.u_username) }}"> <!--uhh it's a bad idea to use u_username, but it's a temp solution anyways.-->
+		<img class="img-circle" style="width:32px;height:32px" src="{{ profile_image(data.u_username) }}">
 	</div>
 	</a>
 	<div class="row col-md-10" style="padding-left: 0px;">
-		{{ userlink(data, 'u_') }} • {{ data.time | relative_time }}
-		<p>{{ data.comment | nl2br }}</p>
+		{{ userlink(data, 'u_') }} &bull; {{ data.time | relative_time }}
+		{% apply markdown_to_html | nl2br %}
+			{{ data.comment | raw }}
+		{% endapply %}
 	</div>
 </div>
