--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -27,9 +27,9 @@
 					{{ watch_box(video) }}
 				</div>
 				<div style="margin-top:5px">
-					{{ comment(comments) }}
-					{{ comment(comments) }}
-					{{ comment(comments) }}
+					{% for comment in comments %}
+						{{ comment(comment) }}
+					{% endfor %}
 				</div>
 			</div>
 			<div class="col-md-3">
