--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -47,6 +47,7 @@
 			</div><!--/.nav-collapse -->
 		</div>
 	</nav>
+	{% block precontent %}{% endblock %}
 	<div class="container">
 		{% block content %}{% endblock %}
 	</div>
