--- a/bootstrap/css/squarebracket-bonuses.css
+++ b/bootstrap/css/squarebracket-bonuses.css
@@ -4,18 +4,18 @@
     padding: 30px 0;
         padding-top: 30px;
         padding-bottom: 30px;
-    color: #cdbfe3;
+    color: #b7cbe3;
     text-shadow: 0 1px 0 rgba(0,0,0,.1);
-    background-color: #6f5499;
+    background-color: #546c99;
     background-image: -webkit-gradient(linear,left top,left bottom,from(#563d7c),to(#6f5499));
     background-image: -webkit-linear-gradient(top,#563d7c 0,#6f5499 100%);
     background-image: -o-linear-gradient(top,#563d7c 0,#6f5499 100%);
-    background-image: linear-gradient(to bottom,#563d7c 0,#6f5499 100%);
+    background-image: linear-gradient(to bottom,#546c99 0,#484c88 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#563d7c", endColorstr="#6F5499", GradientType=0);
     background-repeat: repeat-x;
 	padding-top: 60px;
 	padding-bottom: 60px;
-	font-size: 24px;
+	font-size: 20px;
 }
 
 .bs-docs-header h1 {
