new asset for placeholder thumbnails

--- a/templates/components/videothumbnail.twig
+++ b/templates/components/videothumbnail.twig
@@ -4,7 +4,7 @@
 		{{ imgSrcPath | raw }}
 	{% endautoescape %}
 {% else %}
-	{% set imgSrcPath = 'assets/placeholder.jpg' %}
+	{% set imgSrcPath = 'assets/placeholder.png' %}
 	{% autoescape %}
 		{{ imgSrcPath | raw }}
 	{% endautoescape %}
