Add basic browse page.
Idea: make it grid-based instead of this weird 2005-esque thing

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -9,11 +9,10 @@
 					<div class="row">
 						<div class="col-md-8">
 							<h1>Hi there, {{ current_user.username }}</h1>
-							<button type="button" class="btn btn-primary btn-lg">browse ›</button>
-							<p class="small">(does not currently work due to a lack of a browse page)<p>
+							<button href="browse.php" type="button" class="btn btn-primary btn-lg">browse ›</button><br>
 						</div>
-						<div class="col-md-4">
-						<img src="assets/profiledef.png" alt="pfp">
+						<div class="col-md-4 text-right">
+						<img width="192" src="assets/profiledef.png" alt="pfp">
 						</div>
 					</div>
 				</div>
@@ -55,7 +54,7 @@
 		  <path d="M2 3h10v2H2V3zm0 3h4v3H2V6zm0 4h4v1H2v-1zm0 2h4v1H2v-1zm5-6h2v1H7V6zm3 0h2v1h-2V6zM7 8h2v1H7V8zm3 0h2v1h-2V8zm-3 2h2v1H7v-1zm3 0h2v1h-2v-1zm-3 2h2v1H7v-1zm3 0h2v1h-2v-1z"/>
 		</svg> Latest News</div>
 					<div class="panel-body">
-						some stuff here idk
+						We rewrote the site. We also lost the domain. Have fun!
 					</div>
 				</div>
 			</div>
