--- a/templates/index.twig
+++ b/templates/index.twig
@@ -9,7 +9,7 @@
 					<div class="row">
 						<div class="col-md-8">
 							<h1>Hi there, {{ current_user.username }}</h1>
-							<button href="browse.php" type="button" class="btn btn-primary btn-lg">browse ›</button><br>
+							<a href="browse.php" class="btn btn-primary btn-lg">browse ›</a><br>
 						</div>
 						<div class="col-md-4 text-right">
 						<img width="192" src="assets/profiledef.png" alt="pfp">
@@ -23,9 +23,9 @@
 					<h1>Welcome to squareBracket <big>2.0</big></h1>
 					<p>This is like any other video sharing site... for now at least.</p>
 					<p>
-						<button href="register.php" type="button" class="btn btn-primary btn-lg">Get started ›</button><br>
+						<a href="register.php" class="btn btn-primary btn-lg">Get started ›</a><br>
 						<p class="small">Already have an account?
-						<a href="login.php">Login</button></p>
+						<a href="login.php">Login</a></p>
 					</p>
 				</div>
 			</div>
