why is it not using `profile_image`?

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -12,7 +12,7 @@
 							<a href="browse.php" class="btn btn-primary btn-lg">browse ›</a><br>
 						</div>
 						<div class="col-md-4 text-right">
-						<img width="192" src="assets/profiledef.png" alt="pfp">
+						<img width="192" src="{{ profile_image(current_user.username) }}" alt="pfp">
 						</div>
 					</div>
 				</div>
