empty text field when comment is posted

--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -51,6 +51,8 @@
 					function(data,status){
 						if (status = "success") {
 							$('#comment').prepend(data);
+							$("#commentContents").val('');
+							$("#post").addClass("disabled");
 						}
 					});
 				  });
