--- a/templates/components/comment.twig
+++ b/templates/components/comment.twig
@@ -1,13 +1,14 @@
-<div class="row">
-	<a href="user.php?name={{ data.u_username }}">
-	<div class="col-md-1">
-		<img class="img-circle" style="width:32px;height:32px" src="{{ profile_image(data.u_username) }}">
+<div class="row">	
+	
+	<div class="col-lg-1" style="width:5%;padding-right:0">
+		<a href="user.php?name={{ data.u_username }}">
+			<img class="rounded-circle" style="width:32px;height:32px" src="{{ profile_image(data.u_username) }}">
+		</a>
 	</div>
-	</a>
-	<div class="row col-md-10" style="padding-left: 0px;">
-		{{ userlink(data, 'u_') }} &bull; {{ data.date | relative_time }}
-		{% apply markdown_to_html | nl2br %}
-			{{ data.comment | raw }}
-		{% endapply %}
+    <div class="col-lg-10">
+		{{ userlink(data, 'u_') }} &bull; {{ data.date | relative_time}} 
+		{% apply markdown_to_html | nl2br %} 
+			{{ data.comment | raw }} 
+		{% endapply%}
 	</div>
 </div>
