--- a/templates/components/videobox.twig
+++ b/templates/components/videobox.twig
@@ -1,18 +1,18 @@
-<div class="panel panel-primary">
-	<div class="panel-body">
-		<div class="row">
-			<a href="watch.php?v={{ data.video_id }}">
-				<div class="col-md-4">
-					<div class="thumbnail">
-						<img src="{{ video_thumbnail(data.video_id) }}">
+<div class="card border-primary" style="margin-bottom:10px">
+    <div class="card-body">
+        <div class="row">
+			<div class="col-lg-4">
+				<a href="watch.php?v={{ data.video_id }}">
+					<div class="img-thumbnail">
+						<img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}">
 					</div>
-				</div>
-			</a>
-			<div class="col-md-8">
-				<h3><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h3>
-				<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} views &bull; {{ data.time | relative_time }}</p>
-				<p>{{ data.description|length > 250 ? data.description|slice(0, 250) ~ '...' : data.description  }}</p>
+				</a>
 			</div>
-		</div>
-	</div>
+            <div class="col-lg-8">
+                <h3><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h3>
+				<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} views &bull; {{ data.time | relative_time }}</p>
+				<p>{{ data.description|length > 250 ? data.description|slice(0, 250) ~ '...' : data.description }}</p>
+            </div>
+        </div>
+    </div>
 </div>
