--- a/templates/components/watchbox.twig
+++ b/templates/components/watchbox.twig
@@ -1,9 +1,9 @@
-<div class="panel panel-primary">
-	<div class="panel-body">
-		<div class="col-md-8">
-			<h3>{{ data.title }}</a></h3>
+<div class="card border-primary">
+    <div class="card-body">
+        <div class="col-lg-8">
+           	<h3>{{ data.title }}</h3>
 			<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} views &bull; {{ data.time | date('M j, Y') }}</p>
 			<p>{{ data.description }}</p>
-		</div>
-	</div>
+        </div>
+    </div>
 </div>
