--- a/templates/register.twig
+++ b/templates/register.twig
@@ -1,29 +1,22 @@
-{% extends "_layout.twig" %}
+{% extends "_layout.twig" %} 
+	{% block title %}Register{% endblock%} 
+	{% block content %} 
+		{% if error %}
+			<div class="alert alert-danger" role="alert">{{ error }}</div>
+		{% endif %}
 
-{% block title %}Register{% endblock %}
-
-{% block content %}
-{% if error %}
-	<div class="alert alert-danger" role="alert">{{ error }}</div>
-{% endif %}
-
-<h2>Register</h2>
-
-<form method="POST">
-	<div class="form-group">
-		Username:
-		<input type="text" name="username" class="form-control" placeholder="Username">
-	</div>
-	<div class="form-group">
-		Email:
-		<input type="email" name="email" class="form-control" placeholder="Email">
-	</div>
-	<div class="form-group">
-		Password:
-		<input type="password" name="pass1" class="form-control" placeholder="Password">
-		<input type="password" name="pass2" class="form-control" placeholder="Password (Again)">
-	</div>
-
-	<button type="submit" name="action" class="btn btn-default">Submit</button>
-</form>
-{% endblock %}
+	<h2>Register</h2>
+	<form method="POST">
+		<div class="form-group">Username:
+			<input type="text" name="username" class="form-control" placeholder="Username">
+		</div>
+		<div class="form-group">Email:
+			<input type="email" name="email" class="form-control" placeholder="Email">
+		</div>
+		<div class="form-group">Password:
+			<input type="password" name="pass1" class="form-control" placeholder="Password">
+			<input type="password" name="pass2" class="form-control" placeholder="Password (Again)">
+		</div>
+		<button type="submit" name="action" class="btn btn-secondary">Submit</button>
+	</form>
+	{% endblock %}
