--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -5,11 +5,12 @@
 	{% block content %}
 	<div class="container">
 		<div class="row">
-			<div class="col-md-9">
+			<div class="col-lg-9">
 				<div id="playerContainer"></div>
-				<script src="https://cdn.jsdelivr.net/npm/indigo-player@1/lib/indigo-player.js"></script>
+								<script src="https://cdn.jsdelivr.net/npm/indigo-player@1/lib/indigo-player.js"></script>
 				<script>
 					const config = {
+						autoplay: true,
 						sources: [
 							{
 								type: 'dash',
@@ -58,25 +59,24 @@
 				  });
 				});
 				</script>
+				<div style="margin-top:5px">{{ watch_box(video) }}</div>
 				<div style="margin-top:5px">
-					{{ watch_box(video) }}
-				</div>
-				<div style="margin-top:5px">
-					<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3" placeholder="Enter comment here, Markdown can be used here."></textarea>
+					<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none"
+					rows="3" placeholder="Enter comment here, Markdown can be used here."></textarea>
 					<div style="margin-top:5px"></div>
 					<button id="post" class="btn btn-primary">Post</button>
 					<div style="margin-top:5px"></div>
 					<div id="comment"></div>
-					{% for comment in comments %}
-						{{ comment(comment) }}
-					{% endfor %}
-				</div>
+						{% for comment in comments %} 
+							{{ comment(comment) }} 
+						{% endfor %}
+					</div>
 			</div>
-			<div class="col-md-3">
-				<div class="panel panel-primary">
-					<div class="panel-body">
-						{% for related_video in related_videos %}
-							{{ small_video_box(related_video) }}
+			<div class="col-lg-3">
+				<div class="card border-primary">
+					<div class="card-body">
+						{% for related_video in related_videos %} 
+							{{ small_video_box(related_video)}} 
 						{% endfor %}
 					</div>
 				</div>
