--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,35 +1,31 @@
 {% extends "_layout.twig" %} 
 	{% block title %}Home{% endblock%} 
 	{% block precontent %} 
+	<div id="frontJumbo" class="p-5 mb-4 {% if theme == 'dark' %}bg-dark text-white{% else %}bg-success text-white{% endif %}" style="margin-top:-20px;">
+      <div class="container">
 		{% if logged_in %}
-			<div class="bs-docs-header" style="margin-top:-20px;margin-bottom:20px">
-				<div class="container">
-					<div class="row">
-						<div class="col-xl-10">
-								<h1>Hi there, {{ current_user.username }}</h1>
-				<a href="browse.php" class="btn btn-primary btn-lg">browse &#x203A;</a>
-							<br>
-						</div>
-						<div class="col-xl-2 text-right">
-							<img width="192" src="{{ profile_image(current_user.username) }}" alt="pfp">
-						</div>
-					</div>
+			<div class="row">
+				<div class="col-xl-10">
+					<h1 class="display-5 fw-bold">Hi there, {{ current_user.username }}</h1>
+				</div>
+				<div class="col-xl-2 text-right">
+					<img class="img-fluid" src="{{ profile_image(current_user.username) }}" alt="pfp">
 				</div>
 			</div>
 		{% else %}
-			<div class="bs-docs-header" style="margin-top:-20px;margin-bottom:20px">
-				<div class="container">
-						<h1>Welcome to squareBracket <big>2.0</big></h1>
-					<p>This is like any other video sharing site... for now at least.</p>
-					<p>	<a href="register.php" class="btn btn-primary btn-lg">Get started &#x203A;</a>
-						<br>
-					</p>
-					<p class="small">Already have an account?	<a href="login.php">Login</a>
-					</p>
-					<p></p>
-				</div>
-			</div>
-		{% endif %} 
+			<h1 class="display-5 fw-bold">Welcome to squareBracket <big>2.0</big></h1>
+			<p class="col-xl-8 fs-4">This is like any other video sharing site... for now at least.</p>
+			<p>	
+				<a href="register.php" class="btn btn-primary btn-lg">Get started &#x203A;</a>
+				<br>
+			</p>
+			<p class="small">
+				Already have an account?	
+				<a href="login.php">Login</a>
+			</p>
+		{% endif %}
+      </div>
+    </div>
 	{% endblock %} 
 	{% block content %}
 		<div class="row">
