add back browse button

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -7,6 +7,7 @@
 			<div class="row">
 				<div class="col-xl-10">
 					<h1 class="display-5 fw-bold">Hi there, {{ current_user.username }}</h1>
+					<a href="browse.php" class="btn btn-primary btn-lg">browse &rsaquo;</a>
 				</div>
 				<div class="col-xl-2 text-right">
 					<img class="img-fluid" src="{{ profile_image(current_user.username) }}" alt="pfp">
@@ -16,7 +17,7 @@
 			<h1 class="display-5 fw-bold">Welcome to squareBracket <big>2.0</big></h1>
 			<p class="col-xl-8 fs-4">This is like any other video sharing site... for now at least.</p>
 			<p>	
-				<a href="register.php" class="btn btn-primary btn-lg">Get started &#x203A;</a>
+				<a href="register.php" class="btn btn-primary btn-lg">Get started &rsaquo;</a>
 				<br>
 			</p>
 			<p class="small">
