--- a/templates/user.twig
+++ b/templates/user.twig
@@ -7,13 +7,16 @@
 		<div class="col-md-6 col-lg-4">
 			<div class="card">
 				<div class="card-body">
-					<img src="{{ profile_image(user.username) }}" alt="pfp">
+					<div class="d-flex justify-content-center">
+						<img src="{{ profile_image(user.username) }}" alt="pfp">
+					</div>
 					<div class="caption">
-							<h3>{{ user.username }}</h3>
+						<h3>{{ user.username }}</h3>
 						<p>Joined {{ user.joined | date('M j, Y') }}</p>
 						<p>database does not have such fields lol</p>
-						<p><a href="#" class="btn btn-warning" role="button">Subscribe</a>  <a href="#"
-							class="btn btn-secondary" role="button">Add friend</a>
+						<p>
+							<a href="#" class="btn btn-warning" role="button">Subscribe</a>  
+							<a href="#"class="btn btn-secondary" role="button">Add friend</a>
 						</p>
 					</div>
 				</div>
