remove underline from links

--- a/bootstrap/_variables-dark.scss
+++ b/bootstrap/_variables-dark.scss
@@ -49,6 +49,7 @@ $body-color:                $white !default;
 // Links
 
 $link-color:                $info !default;
+$link-decoration:           none !default;
 
 // Fonts
 
