--- a/bootstrap/_variables.scss
+++ b/bootstrap/_variables.scss
@@ -19,3 +19,4 @@ $enable-responsive-font-sizes: true;
 $secondary: $gray-300;
 $enable-hover-media-query: true;
 $enable-shadows: true;
+$link-decoration: none;
