--- a/bootstrap/custom-dark.scss
+++ b/bootstrap/custom-dark.scss
@@ -114,6 +114,10 @@ $text-shadow: 0 1px 0 rgba(0, 0, 0, 0.05) !default;
   @include gradient-y-three-colors(darken($secondary, 5%), darken($secondary, 10%), 80%, darken($secondary, 20%));
 }
 
+.bg-purple {
+  @include gradient-y-three-colors(darken($purple-500, 5%), darken($purple-500, 10%), 80%, darken($purple-500, 20%));
+}
+
 .progress-bar-striped {
     background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
     background-size: 1rem 1rem;
