--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -19,7 +19,7 @@
 					if (data == 1) {
 						$("#bootstrap").attr("href", "scssrender.php?path=bootstrap/bs.scss");
 						$("#navbar").attr("class", "navbar navbar-light bg-light navbar-static-top navbar-expand-md");
-						$("#frontJumbo").attr("class", "p-5 mb-4 bg-success text-white")
+						$("#frontJumbo").attr("class", "p-5 mb-4 bg-purple text-white")
 						Cookies.set("theme", "light", { expires: 1000 });
 					} else if (data == 2) {
 						$("#bootstrap").attr("href", "scssrender.php?path=bootstrap/bs-dark.scss");
