--- a/templates/index.twig
+++ b/templates/index.twig
@@ -14,7 +14,7 @@
 				</div>
 			</div>
 		{% else %}
-			<h1 class="display-5 fw-bold">Welcome to squareBracket <big>2.0</big></h1>
+			<h1 class="display-5 fw-bold">Welcome to Squarebracket</h1>
 			<p class="col-xl-8 fs-4">This is like any other video sharing site... for now at least.</p>
 			<p>	
 				<a href="register.php" class="btn btn-primary btn-lg">Get started &rsaquo;</a>
