edit jumbotron to glue login button next to register button

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -16,13 +16,10 @@
 		{% else %}
 			<h1 class="display-5 fw-bold">Welcome to Squarebracket</h1>
 			<p class="col-xl-8 fs-4">This is like any other video sharing site... for now at least.</p>
-			<p>	
-				<a href="register.php" class="btn btn-primary btn-lg">Get started &rsaquo;</a>
-				<br>
-			</p>
-			<p class="small">
-				Already have an account?	
-				<a href="login.php">Login</a>
+			<p>	<div class="btn-group">
+					<a href="register.php" class="btn btn-primary btn-lg">Get started</a>
+					<a href="login.php" class="btn btn-light btn-lg">Login</a>
+				</div>
 			</p>
 		{% endif %}
       </div>
