--- a/bootstrap/_variables.scss
+++ b/bootstrap/_variables.scss
@@ -1,4 +1,3 @@
-
 $white: #fff;
 $gray-100: #f8f9fa;
 $gray-200: #e9ecef;
@@ -12,8 +11,10 @@ $black: #000;
 $indigo: #371cd4;
 $purple: #523bb8;
 $pink: #eb46a9;
-$orange: #fd9814;
+$orange: #e6a417;
+$yellow: #f5cc18;
 $teal: #20c997;
+$blue: #337ab7;
 $dark: $gray-800;
 $enable-responsive-font-sizes: true;
 $secondary: $gray-300;
