--- a/templates/index.twig
+++ b/templates/index.twig
@@ -14,7 +14,7 @@
 				</div>
 			</div>
 		{% else %}
-			<h1 class="display-5 fw-bold">Welcome to Squarebracket</h1>
+			<h1 class="display-5 fw-bold">Welcome to [squareBracket]</h1>
 			<p class="col-xl-8 fs-4">This is like any other video sharing site... for now at least.</p>
 			<p>	<div class="btn-group">
 					<a href="register.php" class="btn btn-primary btn-lg">Get started</a>
