--- a/bootstrap/custom-dark.scss
+++ b/bootstrap/custom-dark.scss
@@ -1,6 +1,8 @@
 // Darkly 5.0.0-beta3
 // Bootswatch
 
+@import url('https://fonts.googleapis.com/css2?family=Lato');
+
 @mixin btn-shadow($color){
   @include gradient-y-three-colors(lighten($color, 8%), $color, 60%, darken($color, 4%));
 }
